--- a/scripts/view/dashboard/projects/members.html
+++ b/scripts/view/dashboard/projects/members.html
@@ -6,18 +6,20 @@
     <table class="table table-sm table-bordered mt-2">
         <thead class="thead-light">
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">头像</th>
                 <th scope="col">名称</th>
-                <th scope="col">角色</th>
+                <th scope="col">帐号</th>
+                <th scope="col">昵称</th>
                 <th scope="col">管理员</th>
                 <th scope="col">操作</th>
             </tr>
         </thead>
         <tbody>
-            {% for idx, info in ipairs(members) do %}
+            {% for _, info in ipairs(members) do %}
             <tr>
-                <th scope="row">{{idx}}</th>
+                <td><img src="{{info.avatar}}" class="rounded-circle" width="32px" height="32px"></td>
                 <td>{{info.user}}</td>
+                <td>{{info.account}}</td>
                 <td>{{roles[info.role]}}</td>
                 <td><i class="fa {{info.is_admin == 1 and 'fa-check-square-o' or 'fa-square-o'}}"></i></td>
                 <td>
@@ -168,7 +170,7 @@ $('#mdl-add-member').on('show.bs.modal', function(e) {
             $('#mdl-add-member #uid').val(ret.users[0].uid);
         } else {
             $('#mdl-add-member #waiting').hide();
-            showError('#mdl-add-member #err', '获取邀请成员列表失败！', ret.err_msg);
+            show_error('#mdl-add-member #err', '获取邀请成员列表失败！', ret.err_msg);
         }
     }, 'json');
 });
@@ -201,9 +203,9 @@ function add_member() {
         success: function(rsp) {
             if (rsp.ok) {
                 $('.modal').modal('hide');
-                last_pressed_button.click();
+                last_filter_menu.click();
             } else {
-                showError('#mdl-add-member #err', '添加成员失败', rsp.err_msg);
+                show_error('#mdl-add-member #err', '添加成员失败', rsp.err_msg);
             }
         }
     });
@@ -221,9 +223,9 @@ function edit_member() {
         success: function(rsp) {
             if (rsp.ok) {
                 $('.modal').modal('hide');
-                last_pressed_button.click();
+                last_filter_menu.click();
             } else {
-                showError('#mdl-edit-member #err', '修改成员信息失败', rsp.err_msg);
+                show_error('#mdl-edit-member #err', '修改成员信息失败', rsp.err_msg);
             }
         }
     });
@@ -241,9 +243,9 @@ function del_member() {
         success: function(rsp) {
             if (rsp.ok) {
                 $('.modal').modal('hide');
-                last_pressed_button.click();
+                last_filter_menu.click();
             } else {
-                showError('#mdl-del-member #err', '删除成员失败', rsp.err_msg);
+                show_error('#mdl-del-member #err', '删除成员失败', rsp.err_msg);
             }
         }
     });
