--- a/scripts/view/dashboard/tasks/create_task.html
+++ b/scripts/view/dashboard/tasks/create_task.html
@@ -45,12 +45,12 @@
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label for="start-time">计划开始时间<b class="text-danger ml-2">*</b></label>
-                <input type="text" class="form-control form-datetime" id="start-time" name="start_time" required>
+                <input type="text" class="form-control form-datetime" id="start-time" name="start_time" value="{{os.date('%F')}}" required>
             </div>
 
             <div class="form-group col-md-3">
                 <label for="end-time">计划结束时间<b class="text-danger ml-2">*</b></label>
-                <input type="text" class="form-control form-datetime" id="end-time" name="end_time" required>
+                <input type="text" class="form-control form-datetime" id="end-time" name="end_time" value="{{os.date('%F')}}" required>
             </div> 
         </div>
 
@@ -100,9 +100,14 @@ function get_members_of_proj(pid) {
     $('#form-create-task #cooperator').empty();
     $.post('/dashboard/tasks/members_of_proj', {pid: pid}, function(ret) {
         $.each(ret, function(_, info) {
-            $('#form-create-task #assigned').append('<option value="' + info.uid + '">【' + info.user_role + '】' + info.user + '</option>');
-            $('#form-create-task #cooperator').append('<option value="' + info.uid + '">【' + info.user_role + '】' + info.user + '</option>');
+            if (info.role == 3) $('#form-create-task #assigned').append('<option value="' + info.uid + '">【' + info.user_role + '】' + info.user + '</option>');
+            if (info.role == 4) $('#form-create-task #cooperator').append('<option value="' + info.uid + '">【' + info.user_role + '】' + info.user + '</option>');
         });
+
+        $.each(ret, function(_, info) {            
+            if (info.role != 3) $('#form-create-task #assigned').append('<option value="' + info.uid + '">【' + info.user_role + '】' + info.user + '</option>');
+            if (info.role != 4) $('#form-create-task #cooperator').append('<option value="' + info.uid + '">【' + info.user_role + '】' + info.user + '</option>');
+        });        
     }, 'json');
 }
 
@@ -157,10 +162,10 @@ $('#btn-create-commit').click(function() {
         cache: false,
         success: function(rsp) {
             if (!rsp.ok) {
-                showError('#form-create-task #err', '发布任务失败', rsp.err_msg);
+                show_error('#form-create-task #err', '发布任务失败', rsp.err_msg);
             } else {
                 $('#form-create-task #err').empty();
-                location.href = '/dashboard/tasks/';
+                last_filter_menu.click();
             }
         }
     });
