--- a/scripts/view/dashboard/tasks/mode_normal.html
+++ b/scripts/view/dashboard/tasks/mode_normal.html
@@ -7,26 +7,16 @@
 
             <div class="card-body m-0 p-0" style="background: #eee">
                 {% for _, info in ipairs(tasks.created) do %}
-                <div class="card m-1 rounded-0">
+                <div class="card m-1 rounded-0 {{info.delayed and 'border-danger' or ''}}">
                     <div class="card-body m-0 py-1 px-2">
                         <span class="d-inline-block text-truncate mw-100">                            
                             <span class="{{weights[info.weight].color}}">【{{weights[info.weight].title}}】</span>
-                            <span class="text-muted">#{{info.id}}</span>
                             <a href="#" class="task-link" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
                         </span><br>
-                        {% if #info.tags > 0 then %}
-                        <span class="d-inline-block text-truncate mw-100">
-                            {% for _, tag in ipairs(info.tags) do %}
-                            <span class="badge {{tags[tag].color}} mr-1">{{tags[tag].title}}</span>
-                            {% end %}
-                        </span><br>
-                        {% end %}
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
-                            <span class="{{info.delayed and 'text-danger' or ''}}"><i class="fa fa-calendar mr-1"></i>{{string.format('%02d.%02d', info.end_time.month, info.end_time.day)}}</span>
+                            <span><i class="fa fa-calendar mr-1"></i>{{tostring(info.end_time)}}</span>
                             <span class="pull-right">
-                                <span class="badge badge-dark text-white ml-2">{{info.creator_name}}</span>
-                                <i class="fa fa-chevron-right mx-1"></i>
-                                <span class="badge badge-dark text-white">{{info.assigned_name}}</span>
+                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}</label>
                             </span>
                         </small>
                     </div>
@@ -43,26 +33,16 @@
 
             <div class="card-body m-0 p-0" style="background-color: #eee;">
                 {% for _, info in ipairs(tasks.underway) do %}
-                <div class="card m-1 rounded-0">
+                <div class="card m-1 rounded-0 {{info.delayed and 'border-danger' or ''}}">
                     <div class="card-body m-0 py-1 px-2">
                         <span class="d-inline-block text-truncate mw-100">                            
                             <span class="{{weights[info.weight].color}}">【{{weights[info.weight].title}}】</span>
-                            <span class="text-muted">#{{info.id}}</span>
                             <a href="#" class="task-link" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
                         </span><br>
-                        {% if #info.tags > 0 then %}
-                        <span class="d-inline-block text-truncate mw-100">
-                            {% for _, tag in ipairs(info.tags) do %}
-                            <span class="badge {{tags[tag].color}} mr-1">{{tags[tag].title}}</span>
-                            {% end %}
-                        </span><br>
-                        {% end %}
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
-                            <span class="{{info.delayed and 'text-danger' or ''}}"><i class="fa fa-calendar mr-1"></i>{{string.format('%02d.%02d', info.end_time.month, info.end_time.day)}}</span>
+                            <span><i class="fa fa-calendar mr-1"></i>{{tostring(info.end_time)}}</span>
                             <span class="pull-right">
-                                <span class="badge badge-dark text-white ml-2">{{info.creator_name}}</span>
-                                <i class="fa fa-chevron-right mx-1"></i>
-                                <span class="badge badge-dark text-white">{{info.assigned_name}}</span>
+                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}</label>
                             </span>
                         </small>
                     </div>
@@ -79,26 +59,16 @@
 
             <div class="card-body m-0 p-0" style="background-color: #eee">
                 {% for _, info in ipairs(tasks.testing) do %}
-                <div class="card m-1 rounded-0">
+                <div class="card m-1 rounded-0 {{info.delayed and 'border-danger' or ''}}">
                     <div class="card-body m-0 py-1 px-2">
                         <span class="d-inline-block text-truncate mw-100">                            
                             <span class="{{weights[info.weight].color}}">【{{weights[info.weight].title}}】</span>
-                            <span class="text-muted">#{{info.id}}</span>
                             <a href="#" class="task-link" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
                         </span><br>
-                        {% if #info.tags > 0 then %}
-                        <span class="d-inline-block text-truncate mw-100">
-                            {% for _, tag in ipairs(info.tags) do %}
-                            <span class="badge {{tags[tag].color}} mr-1">{{tags[tag].title}}</span>
-                            {% end %}
-                        </span><br>
-                        {% end %}
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
-                            <span class="{{info.delayed and 'text-danger' or ''}}"><i class="fa fa-calendar mr-1"></i>{{string.format('%02d.%02d', info.end_time.month, info.end_time.day)}}</span>
+                            <span><i class="fa fa-calendar mr-1"></i>{{tostring(info.end_time)}}</span>
                             <span class="pull-right">
-                                <span class="badge badge-dark text-white ml-2">{{info.creator_name}}</span>
-                                <i class="fa fa-chevron-right mx-1"></i>
-                                <span class="badge badge-dark text-white">{{info.assigned_name}}</span>
+                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}</label>
                             </span>
                         </small>
                     </div>
@@ -115,26 +85,16 @@
 
             <div class="card-body m-0 p-0" style="background-color: #eee">
                 {% for _, info in ipairs(tasks.finished) do %}
-                <div class="card m-1 rounded-0">
+                <div class="card m-1 rounded-0 {{info.delayed and 'border-danger' or ''}}">
                     <div class="card-body m-0 py-1 px-2">
                         <span class="d-inline-block text-truncate mw-100">                            
                             <span class="{{weights[info.weight].color}}">【{{weights[info.weight].title}}】</span>
-                            <span class="text-muted">#{{info.id}}</span>
                             <a href="#" class="task-link" onclick="return open_task('{{info.id}}');">{{info.name}}</a>
                         </span><br>
-                        {% if #info.tags > 0 then %}
-                        <span class="d-inline-block text-truncate mw-100">
-                            {% for _, tag in ipairs(info.tags) do %}
-                            <span class="badge {{tags[tag].color}} mr-1">{{tags[tag].title}}</span>
-                            {% end %}
-                        </span><br>
-                        {% end %}
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
-                            <span class="{{info.delayed and 'text-danger' or ''}}"><i class="fa fa-calendar mr-1"></i>{{string.format('%02d.%02d', info.end_time.month, info.end_time.day)}}</span>
+                            <span><i class="fa fa-calendar mr-1"></i>{{tostring(info.end_time)}}</span>
                             <span class="pull-right">
-                                <span class="badge badge-dark text-white ml-2">{{info.creator_name}}</span>
-                                <i class="fa fa-chevron-right mx-1"></i>
-                                <span class="badge badge-dark text-white">{{info.assigned_name}}</span>
+                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}</label>
                             </span>
                         </small>
                     </div>
