--- a/scripts/view/dashboard/tasks/task_info_readonly.html
+++ b/scripts/view/dashboard/tasks/task_info_readonly.html
@@ -38,10 +38,17 @@
             </div>
         </div>
 
+        <!-- 优先级 -->
+        <div>
+            <div class="px-2">
+                <i class="fa fa-tag mr-1"></i>{{weights[task.info.weight].title}}
+            </div>
+        </div>
+
         <!-- 时间 -->
         <div>
             <div class="px-2">
-                <i class="fa fa-calendar mr-1"></i>{{tostring(task.info.start_time) .. ' ~ ' .. tostring(task.info.end_time)}}
+                <i class="fa fa-calendar mr-1"></i>{{string.format('%d月%d日 - %d月%d日', task.info.start_time.month, task.info.start_time.day, task.info.end_time.month, task.info.end_time.day)}}
             </div>
         </div>
         
@@ -61,19 +68,12 @@
                 {% end %}
             </div>
         </div>
-
-        <!-- 优先级 -->
-        <div>
-            <div class="px-2">
-                <i class="fa fa-tag mr-1"></i>{{weights[task.info.weight].title}}
-            </div>
-        </div>
     </div>
     <hr class="mt-2">
 </div>
 
 <!-- 任务信息 -->
-<div class="task-detail-info-pane mt-4">
+<div class="task-detail-info-pane mt-4" editing-comment="false">
 
     <!-- 附件 -->
     {% if #task.attachments > 0 then %}
@@ -137,6 +137,19 @@
     </div>
 </div>
 
+<!-- 底部评论工具 -->
+<div class="task-comment-pane px-2" editing-comment="false">
+    <input id="trigger-task-comment" type="text" class="form-control" placeholder="发表评论...">
+    <div class="editing-pane pt-2">
+        <textarea id="task-comment-input" data-provide="markdown" rows="10"
+            data-savable="false"
+            data-iconlibrary="fa"
+            data-upload="/dashboard/files/upload"
+            data-fullscreen = "{ enable: false }"
+            data-footer='<div class="text-right"><button id="btn-close-edit" type="button" class="btn btn-sm btn-secondary mr-2" onclick="return end_comment(false);"><i class="fa fa-close"></i></button><button id="btn-save-content" type="button" class="btn btn-sm btn-primary" onclick="return end_comment(true);"><i class="fa fa-send-o"></i></button></div>'></textarea>
+    </div>
+</div>
+
 <script>
 var content = $('#task-content-preview').get(0).innerHTML;
 
@@ -150,17 +163,49 @@ $(document).ready(function() {
         elem.empty();
         diag.drawSVG(elem.get(0));
     });
-})
+});
+
+$('#trigger-task-comment').focusin(function() {
+    $('.task-comment-pane').attr('editing-comment', true);
+    $('.task-detail-info-pane').attr('editing-comment', true);
+    $('#task-comment-input').focus();
+});
+
+$('#task-comment-input').markdown();
+
+function refresh_task_info() {
+    open_task('{{task.info.id}}');
+}
 
 function close_task() {
     $('#task-view').removeClass('visible');
     $('#task-view').addClass('invisible');
-    if (location.path = '/dashboard/projects') last_pressed_button.click();
+
+    if (last_filter_menu) last_filter_menu.click();
 }
 
 function archive(tid) {
     $.post('/dashboard/tasks/mod_status', {tid : tid, org_status: 4, new_status : 5}, function() {
-        open_task(tid);
+        refresh_task_info();
+    });
+}
+
+function end_comment(send) {
+    if (send) {
+        var comment = $('#task-comment-input').val();
+        $.post('/dashboard/tasks/add_comment', { id: '{{task.info.id}}', comment: marked(comment || '') }, function(ret) {
+            if (ret.ok) refresh_task_info();
+        });
+    }
+
+    $('#task-comment-input').val('');
+    $('.task-comment-pane').attr('editing-comment', false);
+    $('.task-detail-info-pane').attr('editing-comment', false);
+}
+
+function del_comment(id) {
+    $.post('/dashboard/tasks/del_comment', { id: id }, function(ret) {
+        if (ret.ok) refresh_task_info();
     });
 }
 
