--- a/scripts/view/dashboard/tasks/view_tasks.html
+++ b/scripts/view/dashboard/tasks/view_tasks.html
@@ -21,8 +21,11 @@
 </div>
 
 <script type='text/javascript'>
+var task_info_changed = false;
 
-function open_task(tid) {
+function open_task(tid, changed) {
+    if (changed) task_info_changed = true;
+
     $('#task-info-pane').empty();
     $('#task-info-pane').get(0).innerHTML = '<div class="text-center text-muted" style="margin-top: 40%"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i></div>';
     $('#task-view').removeClass('invisible');
@@ -33,6 +36,14 @@ function open_task(tid) {
         $('#task-info-pane').empty();
         $('#task-info-pane').append($(ret));
     }, 'html');
+}
+
+function close_task() {
+    $('#task-view').removeClass('visible');
+    $('#task-view').addClass('invisible');
+    $('.xdsoft_datetimepicker').remove();
+
+    if (last_filter_menu && task_info_changed) last_filter_menu.click();
 }
 
 function switch_viewmode() {
