--- a/scripts/view/dashboard/tasks/task_info.html
+++ b/scripts/view/dashboard/tasks/task_info.html
@@ -55,7 +55,7 @@
         <!-- 协作 -->
         <div class="dropdown">
             <div class="btn-link px-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-at mr-1"></i>{{task.info.cooperator_name}}
+                <i class="fa fa-bug mr-1"></i>{{task.info.cooperator_name}}
             </div>
             <form class="dropdown-menu p-0 border-0">
                 <select class="custom-select" onchange="return mod_cooperator(this);">
