--- a/scripts/view/dashboard/projects/reports.html
+++ b/scripts/view/dashboard/projects/reports.html
@@ -15,10 +15,14 @@
                 <hr>
                 <ul class="mt-2 px-0" style="list-style-type: none">
                     {% for _, task in ipairs(report.archived) do %}
-                    <li class="d-block text-truncate text-muted mw-100 mb-1">
+                    <li class="d-block text-truncate mw-100 mb-1">
                         <i class="fa fa-calendar-check-o text-success"></i>
+
                         <a href="#" class="task-link" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
-                        <span class="badge badge-secondary text-white ml-1">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-secondary text-white">{{task.assigned_name}}</span>
+
+                        <small class="text-muted ml-2 pull-right align-baseline">
+                            {{task.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{task.assigned_name}}<i class="fa fa-chevron-right mx-1"></i>{{task.cooperator_name}}
+                        </small>
                     </li>
                     {% end %}
                 </ul>
@@ -28,10 +32,14 @@
                 <hr>
                 <ul class="mt-2 px-0" style="list-style-type: none">
                     {% for _, task in ipairs(report.not_archived) do %}
-                    <li class="d-block text-truncate text-muted mw-100 mb-1">
-                        <i class="fa fa-calendar-times-o text-danger mr-1"></i><span class="text-danger">{{string.format('%04d.%02d.%02d', task.end_time.year, task.end_time.month, task.end_time.day)}}</span>
+                    <li class="d-block text-truncate mw-100 mb-1">
+                        <i class="fa fa-calendar-times-o text-danger mr-1"></i><span class="text-danger">{{tostring(task.end_time)}}</span>
+                        
                         <a href="#" class="task-link" onclick="return open_task('{{task.id}}');">{{task.name}}</a>
-                        <span class="badge badge-secondary text-white ml-1">{{task.creator_name}}</span><i class="fa fa-chevron-right mx-1"></i><span class="badge badge-secondary text-white">{{task.assigned_name}}</span>
+
+                        <small class="text-muted ml-2 pull-right align-baseline">
+                            {{task.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{task.assigned_name}}<i class="fa fa-chevron-right mx-1"></i>{{task.cooperator_name}}
+                        </small>
                     </li>
                     {% end %}
                 </ul>
