--- a/scripts/view/dashboard/tasks/task_info_readonly.html
+++ b/scripts/view/dashboard/tasks/task_info_readonly.html
@@ -34,7 +34,7 @@
         <!-- 测试 -->
         <div>
             <div class="px-2">
-                <i class="fa fa-at mr-1"></i>{{task.info.cooperator_name}}
+                <i class="fa fa-bug mr-1"></i>{{task.info.cooperator_name}}
             </div>
         </div>
 
