--- a/scripts/view/layout_base.html
+++ b/scripts/view/layout_base.html
@@ -77,7 +77,14 @@
 			+ '</div>';
 	}
 
+	var navbar_popup_url = null;
 	function navbar_popup(url, width) {
+		if (url == navbar_popup_url && $('.navbar-popup').hasClass('visible')) {
+			navbar_popup_close();
+			return;
+		}
+
+		navbar_popup_url = url;
 		$.post(url, function(ret) {
 			$('.navbar-popup').empty();
 			$('.navbar-popup').append($(ret));
