display cooperator name in normal view

--- a/scripts/view/dashboard/tasks/mode_normal.html
+++ b/scripts/view/dashboard/tasks/mode_normal.html
@@ -16,7 +16,7 @@
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
                             <span><i class="fa fa-calendar mr-1"></i>{{tostring(info.end_time)}}</span>
                             <span class="pull-right">
-                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}</label>
+                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.cooperator_name}}</label>
                             </span>
                         </small>
                     </div>
@@ -42,7 +42,7 @@
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
                             <span><i class="fa fa-calendar mr-1"></i>{{tostring(info.end_time)}}</span>
                             <span class="pull-right">
-                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}</label>
+                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.cooperator_name}}</label>
                             </span>
                         </small>
                     </div>
@@ -68,7 +68,7 @@
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
                             <span><i class="fa fa-calendar mr-1"></i>{{tostring(info.end_time)}}</span>
                             <span class="pull-right">
-                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}</label>
+                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.cooperator_name}}</label>
                             </span>
                         </small>
                     </div>
@@ -94,7 +94,7 @@
                         <small class="d-inline-block text-truncate mw-100" style="min-width: 100%">
                             <span><i class="fa fa-calendar mr-1"></i>{{tostring(info.end_time)}}</span>
                             <span class="pull-right">
-                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}</label>
+                                <label class="text-muted m-0">{{info.creator_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.assigned_name}}<i class="fa fa-chevron-right mx-1"></i>{{info.cooperator_name}}</label>
                             </span>
                         </small>
                     </div>
